src/parser/parser_expr.cpp
#include "parser.h"
#include <filesystem>
#include <memory>
#include <optional>
#include <ranges>
#include <stddef.h>
#include <string>
#include <utility>
#include <variant>
#include <vector>

#include "parser/tokenizer.hpp"
#include "span.h"

using namespace std;

namespace shikimori {

optional<Spanned<ast::Expr>> Parser::parse_expression() {
  return parse_assignment();
}

optional<Spanned<ast::Expr>> Parser::parse_assignment() {
  size_t start = current_pos;
  auto left = parse_logical_or();
  if (!left)
    return nullopt;

  // Range operators: .. and ..=
  if (check(TokenType::DOT_DOT) || check(TokenType::DOT_DOT_EQ)) {
    bool inclusive = current().type == TokenType::DOT_DOT_EQ;
    advance();
    auto right = parse_logical_or();
    if (!right)
      return nullopt;

    ast::RangeExpr range;
    range.start = make_unique<ast::Expr>(std::move(left->value));
    range.end = make_unique<ast::Expr>(std::move(right->value));
    range.inclusive = inclusive;
    range.span = get_span_for(start);

    ast::Expr expr;
    expr.span = range.span;
    expr.value = std::move(range);
    return Spanned<ast::Expr>(std::move(expr), expr.span);
  }

  if (match(TokenType::ASSIGN)) {
    auto right = parse_expression();
    if (!right)
      return nullopt;

    ast::Assignment assign;
    assign.target = make_unique<ast::Expr>(std::move(left->value));
    assign.value = make_unique<ast::Expr>(std::move(right->value));
    assign.span = get_span_for(start);

    ast::Expr expr;
    expr.span = assign.span;
    expr.value = std::move(assign);
    return Spanned<ast::Expr>(std::move(expr), expr.span);
  }

  return left;
}
